ISSUE #101 - Implemented horizontal scrolling to show element in tree

--- a/public/plugins/tree/tree.css
+++ b/public/plugins/tree/tree.css
@@ -75,6 +75,10 @@ tree .treeToggleButton .treeToggleButtonDisabled {
 
 /** Tree filter list **************************************************************************************************/
 
+tree .virtualRepeatdemoInfiniteScroll {
+  overflow: auto;
+}
+
 tree .virtualRepeatdemoInfiniteScroll .vertical-container {
   height: 770px;
   min-width: 800px;
